Sun Sep 20 09:52:39 1998  Owen Taylor  <otaylor@gtk.org>

	* HACKING: indent other than GNU indent should be OK
	  now.

	* gtk/genmarshal.pl gtk/Makefile.am: Call indent on file
	  instead of piping through indent. If indent wasn't
	  found in ./configure don't bother indenting at 
	  all.

Fri Sep 18 19:11:10 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h: Add names to prototype for gdk_image_new_bitmap.

Fri Sep 18 18:54:59 1998  Jay Cox  (jaycox@earthlink.net)

	* gtk/Makefile.am: use $(AWK) instead of awk

1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (gdk_headers): 
	Remove references to $(top_srcdir). 
	(gtk.defs, gtktypebuiltins{.h,_vars.c,_ids.c,_evals.c}): Simplify.
	* gtk/makeenums.pl (parse_entries): Don't look for $srcdir.

Fri Sep 18 19:58:24 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h (struct _GtkObject): changed gpointer object_data; to
	GData*object_data to cure compiler warnings.

Thu Sep 17 19:06:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* install-sh
	* missing
	* mkinstalldirs: updated to latest automake version

1998-09-17  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk/Makefile.am (source_headers): Move `gtkfeature.h' ...
	(gtkinclude_HEADERS): ... here.
	(gtk.defs): Pass `g' flag to sed, to replace all occurances.

Thu Sep 17 10:49:51 1998  Raph Levien  <raph@gimp.org>

	* HACKING: added GNU indent, as it is now required to successfully
	build gtk+. Should this be detected in autoconf, possibly?

Tue Sep 15 14:57:30 1998  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am gtk-config.in l*: Update to libtool-1.2b,
	change library versioning scheme to drop LT_RELEASE
	from the -l line, while keeping it in the soname.

Tue Sep 15 14:10:33 1998  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.in: define a MAINT-like variable REBUILD
	which is set if Perl and awk are found, and autogenerated sources
	can be rebuilt. Remove the auto-generated sources from
	CVS. 
